corrected margins on mobile views to align all sections

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -283,7 +283,7 @@ nav .picture {
   .box div {
     width: auto;
     margin: 0;
-    padding: 1rem;
+    padding: 1rem 0;
     padding-bottom: 3rem;
   }
   .box div h3 {
@@ -347,7 +347,7 @@ nav .picture {
 
 @media only screen and (max-width:768px) {
   .courses .container {
-    padding: 1rem 3.5rem 2rem;
+    padding: 1rem 1rem 2rem;
     border-top: 1px solid rgb(216,216,216);
     border-bottom: 1px solid rgb(216,216,216);
     background-color: white;
@@ -433,7 +433,7 @@ footer .container {
   justify-content: space-between;
 }
 footer p {
-  margin-left: 1.5rem;
+  margin-left: 1rem;
 }
 footer .terms-privacy {
   margin-right: 1rem;
